Fix feed title alignment issue

--- a/assets/css/blog/feed.css
+++ b/assets/css/blog/feed.css
@@ -31,6 +31,7 @@
 .feed-calendar {
     display: flex;
     margin-right: 1.5rem;
+    min-width: 45px;
     color: var(--brand-color);
     font-size: 1.1rem;
     font-weight: 800;
